# ARTSynchronized

./: .gitmodules  CMakeLists.txt  Key.h  README.md
ART/: N.h
